[tool.poetry]
name = "ciphervault"
version = "0.1.0"
description = ""
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^8.2.0"
pycryptodome = "^3.19.0"
bcrypt = "^4.0.1"
yagmail = "^0.15.293"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
